--- a/Diploma_Zayats/Diploma_Zayats.csproj
+++ b/Diploma_Zayats/Diploma_Zayats.csproj
@@ -28,6 +28,7 @@
     <None Remove="Client\" />
     <None Remove="TestData\CreateIssue.json" />
     <None Remove="TestData\GetIssue.json" />
+    <None Remove="TestData\GetRequirement.json" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Client\" />
@@ -36,10 +37,6 @@
     <None Remove="appsettings.json" />
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <None Remove="TestData\CreateProject.json" />
-    <Content Include="TestData\CreateProject.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Update="TestData\GetProject">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -52,6 +49,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="TestData\GetIssue.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="TestData\GetRequirement.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
