--- a/Diploma_Zayats/Diploma_Zayats.csproj
+++ b/Diploma_Zayats/Diploma_Zayats.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
     <PackageReference Include="RestSharp" Version="110.2.0" />
     <PackageReference Include="System.Reflection" Version="4.3.0" />
+    <PackageReference Include="NUnit.Allure" Version="1.2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
