--- a/Diploma_Zayats/Diploma_Zayats.csproj
+++ b/Diploma_Zayats/Diploma_Zayats.csproj
@@ -23,6 +23,11 @@
     <PackageReference Include="RestSharp" Version="110.2.0" />
     <PackageReference Include="System.Reflection" Version="4.3.0" />
     <PackageReference Include="NUnit.Allure" Version="1.2.1.1" />
+    <PackageReference Include="Selenium.Support" Version="4.10.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.10.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="114.0.5735.9000" />
+    <PackageReference Include="SeleniumExtras.WaitHelpers" Version="1.0.2" />
+    <PackageReference Include="WebDriverManager" Version="2.16.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,9 +35,17 @@
     <None Remove="TestData\CreateIssue.json" />
     <None Remove="TestData\GetIssue.json" />
     <None Remove="TestData\GetRequirement.json" />
+    <None Remove="Core\" />
+    <None Remove="Tests\GUI\" />
+    <None Remove="Pages\" />
+    <None Remove="Wrappers\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Client\" />
+    <Folder Include="Core\" />
+    <Folder Include="Tests\GUI\" />
+    <Folder Include="Pages\" />
+    <Folder Include="Wrappers\" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="appsettings.json" />
