add fixes after review

--- a/Diploma_Zayats/appsettings.json
+++ b/Diploma_Zayats/appsettings.json
@@ -7,7 +7,12 @@
     }
   },
   "AppSettings": {
-    "URL": "https://qa_anastasiya_zayats.testmonitor.com/"
+    "URL": "https://qa_anastasiya_zayats.testmonitor.com/",
+    "MaxTimeout": 10000,
+    "MaxWaitTime": 30,
+    "WaitForPageLoadingTime": 60,
+    "WebDriverWaitTime": 10,
+    "Headless": false
   },
   "Users": [
     {
